last hi chnging hai bhai

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akmal Shahzad Khan - Portfolio</title>
+    <title>Muhammad Akmal Shahzad - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
         <div class="nav-content">
             <div class="logo">
                 <span class="logo-bracket">{</span>
-                <span class="logo-text">AK</span>
+                <span class="logo-text">MAS</span>
                 <span class="logo-bracket">}</span>
             </div>
             <div class="nav-menu">
@@ -37,7 +37,7 @@
         <section id="home" class="hero">
             <div class="hero-grid">
                 <div class="hero-content">
-                    <h1>Akmal Shahzad Khan</h1>
+                    <h1>Muhammad Akmal Shahzad</h1>
                     <h2>Software Engineer</h2>
                     <p>Passionate about creating innovative solutions and building scalable applications</p>
                     <div class="cta-buttons">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-image">
-                        <img src="profile.png" alt="Akmal Shahzad Khan">
+                        <img src="profile.png" alt="Muhammad Akmal Shahzad">
                     </div>
                     <div class="floating-skills">
                         <span>WordPress</span>
@@ -68,20 +68,7 @@
                 <div class="about-grid">
                     <div class="about-text">
                         <p>I am a Software Engineer with expertise in developing web applications and software solutions. With a strong foundation in computer science and practical experience in various technologies, I strive to create efficient and user-friendly applications.</p>
-                        <div class="stats-grid">
-                            <div class="stat-item">
-                                <span class="stat-number">4+</span>
-                                <span class="stat-label">Years Experience</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-number">50+</span>
-                                <span class="stat-label">Projects Completed</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-number">30+</span>
-                                <span class="stat-label">Happy Clients</span>
-                            </div>
-                        </div>
+                       
                     </div>
                     <div class="about-details">
                         <div class="detail-item">
@@ -92,12 +79,12 @@
                         <div class="detail-item">
                             <i class="fas fa-code"></i>
                             <h3>Specialization</h3>
-                            <p>Full Stack Development</p>
+                            <p>Frontend Development</p>
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <h3>Location</h3>
-                            <p>Pakistan</p>
+                            <p>Islamabad, Pakistan</p>
                         </div>
                     </div>
                 </div>
@@ -162,31 +149,7 @@
                             <li>Responsive Design</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <div class="skill-header">
-                            <i class="fas fa-server"></i>
-                            <h3>Backend</h3>
-                        </div>
-                        <ul>
-                            <li>Node.js</li>
-                            <li>Python</li>
-                            <li>Java</li>
-                            <li>SQL</li>
-                            <li>PHP</li>
-                        </ul>
-                    </div>
-                    <div class="skill-category">
-                        <div class="skill-header">
-                            <i class="fas fa-tools"></i>
-                            <h3>Tools & Technologies</h3>
-                        </div>
-                        <ul>
-                            <li>Git</li>
-                            <li>Docker</li>
-                            <li>AWS</li>
-                            <li>Agile/Scrum</li>
-                        </ul>
-                    </div>
+       
                     <div class="skill-category">
                         <div class="skill-header">
                             <i class="fas fa-chart-line"></i>
@@ -256,7 +219,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Akmal Shahzad Khan. All rights reserved.</p>
+                <p>&copy; 2024 Muhammad Akmal Shahzad. All rights reserved.</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/akmalshahzad1/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
@@ -266,6 +229,8 @@
         </div>
     </footer>
 
+    <!-- EmailJS SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
