last hi chnging hai bhai

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <span>WordPress</span>
                         <span>SEO</span>
                         <span>React</span>
-                        <span>Node.js</span>
+                        <span>JavaScript</span>
                     </div>
                 </div>
             </div>
